syntax = "proto3";
 
package NAlice.NData;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/news";
option java_package = "ru.yandex.alice.protos.data.scenario.news";

import "mapreduce/yt/interface/protos/extension.proto";
 
message TNewsItem {
    message TImage {
        string Src = 1 [json_name = "src", (NYT.column_name) = "src"];
        int32 Width = 2 [json_name = "width", (NYT.column_name) = "width"];
        int32 Height = 3 [json_name = "height", (NYT.column_name) = "height"];
    }

    string Text = 1 [json_name = "text", (NYT.column_name) = "text"];
    string Url = 2 [json_name = "url", (NYT.column_name) = "url"];
    TImage Image = 3 [json_name = "image", (NYT.column_name) = "image"];
    string Messages = 5 [json_name = "messages", (NYT.column_name) = "messages"];
    string TurboIconUrl = 6 [json_name = "turbo_icon_url", (NYT.column_name) = "turbo_icon_url"];
    string Agency = 7 [json_name = "agency", (NYT.column_name) = "agency"];
    string Logo = 8 [json_name = "logo", (NYT.column_name) = "logo"];
    uint64 PubDate = 9 [json_name = "pub_date", (NYT.column_name) = "pub_date"];
    repeated TNewsItem ExtendedNews = 10 [json_name = "extended_news", (NYT.column_name) = "extended_news"];
}
 
message TNewsGalleryData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TNewsItem NewsItems = 1 [json_name = "news_items", (NYT.column_name) = "news_items"];
    int32 CurrentNewsItem = 2 [json_name = "current_news_item", (NYT.column_name) = "current_news_item"];
    string Topic = 3 [json_name = "topic", (NYT.column_name) = "topic"];
    string Tz = 4 [json_name = "tz", (NYT.column_name) = "tz"];
}
 
message TNewsTeaserData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    TNewsItem NewsItem = 1 [json_name = "news_item", (NYT.column_name) = "news_item"];
    string Topic = 2 [json_name = "topic", (NYT.column_name) = "topic"];
    string Tz = 3 [json_name = "tz", (NYT.column_name) = "tz"];
}

message TNewsMainScreenData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TNewsItem NewsItems = 1 [json_name = "news_items", (NYT.column_name) = "news_items"];
    string Topic = 2 [json_name = "topic", (NYT.column_name) = "topic"];
    string Tz = 3 [json_name = "tz", (NYT.column_name) = "tz"];
}